# Gyropode

./: .gitignore  CMakeLists.txt  README.md  compiler.sh  disablemotors.sh  gyro.cpp  gyro.h  gyro_test.cpp  gyro_test_copy.cpp  main  main.cpp  motor.cpp  motor.h
bcm2835-1.71/examples/blink/: a.out  blink.c
bcm2835-1.71/examples/i2c/: CaptAcceleroNew.c  a.out
bcm2835-1.71/robot_gyropode/motor/: CMakeLists.txt  a.out  main.cpp  motor.cpp  motor.h  motorworking.cpp
sensor/: CaptAcceleroNew.c  CapteurAccelero.c
